2010-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Make ‘take’ handle branch number.

	Regression introduced 2010-04-21,
	"Use ‘TAKE’, not ‘partialno’; zonk the latter".
	* rcsrev.c (take): Stop looping at terminating NUL;
	in that case, accumulate up to the NUL as well.
	* base.h (take): Update var name in func decl.

2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Centralize ‘COMPAT2’ support.

	* b-anchor.c [COMPAT2] (tiny_suffix): New ‘struct tinysym’.
	* base.h [COMPAT2] (tiny_suffix): New ‘struct tinysym’ decl.
	* rcssyn.c [COMPAT2] (tiny_suffix): Delete.

2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘tmpfile’.

	* rcs.c (sendmail, buildeltatext): Use ‘tmpfile’.

2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix syntax error when ‘--with-mailer=MAILER’.

	Regression introduced 2010-03-30, "Abstract writes to stderr".
	* rcs.c (sendmail): Add missing semicolon.

2010-05-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use #define for ‘rcsdir’; rename its -len var conventionally.

	* rcsfnms.c (rcsdir): Convert string var to #define.
	(rcsdirlen): Rename from ‘rcslen’.
	(rcssuffix): Use ‘rcsdirlen’.
	(fin2open): Use ‘rcsdirlen’ directly.

2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For collecting deltas, replace file-static var w/ local var.

	* ci.c (gendeltas): Delete var.
	(addelta): Take ‘struct hshentries **’; pass it to ‘gr_revno’.
	(main): Use local var for collecting deltas; update call to ‘addelta’.
	* co.c (gendeltas): Delete var.
	(main): Use local var for collecting deltas.
	* rcs.c (gendeltas): Delete var.
	(removerevs, main): Use local var for collecting deltas.

2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: delta_from_ref

	* base.h (delta_from_ref): New func decl.
	* rcsrev.c (delta_from_ref): New func.
	(branchtip): Use ‘delta_from_ref’.
	* ci.c (addbranch, main): Likewise.
	* co.c (addjoin): Likewise.